--- a/src/components/CountryCard.css
+++ b/src/components/CountryCard.css
@@ -1,7 +1,6 @@
 .country-card {
     width: 264px;
     height: 336px;
-    /* border: 1px solid red; */
     display:flex;
     flex-direction: column;
     box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 3%);
@@ -14,7 +13,6 @@
 .country-flag {
     width:100%;
     height: 160px;
-    /* border: 1px solid black; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -28,7 +26,7 @@
 }
 
 .country-name {
-    font-size: var(--bold-font-size);
+    font-size: var(--country-name-font-size);
     font-weight: var(--font-weight-800);
     margin-bottom: .5rem;
 }
