--- a/src/components/CountryContainer.css
+++ b/src/components/CountryContainer.css
@@ -1,5 +1,5 @@
 .country-container{
-    border:1px solid red;
+    /* border:1px solid red; */
     height: 100%;
     min-height: 100vh;
     padding: 3.5rem 5rem;
@@ -18,8 +18,15 @@
     gap: 75px;
 }
 
-@media (min-width: 0px) and (max-width: 500px) {
+@media (min-width: 0px) and (max-width: 750px) {
+    .country-card-container {
+        /* border: 1px solid red; */
+        justify-content: center;
+        row-gap: 40px;
+    }
     .country-container {
-        border: 1px solid dodgerblue;
+        border: 1px solid palegreen;
+        padding: 1rem;
+        align-items:center;
     }
   }
