--- a/src/components/Filter.css
+++ b/src/components/Filter.css
@@ -1,4 +1,5 @@
 .filter {
+    height: 56px;
     width: 200px;
     border: none;
     padding: 0 1.5rem;
