--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -19,10 +19,10 @@
     font-size: var(--regular-font-size);
 }
 
-@media (min-width: 0px) and (max-width: 500px) {
+@media (min-width: 0px) and (max-width: 750px) {
     .header {
         border: 1px solid dodgerblue;
-        font-size: 14px;
+        font-size: var(--regular-font-size);
         padding: 0 1rem;
     }
   }
